--- a/index.html
+++ b/index.html
@@ -8,5 +8,71 @@
 
 		<link rel="stylesheet" href="./css/main.css" />
 	</head>
-	<body></body>
+	<body>
+		<header class="navbar">
+			<h1 class="logo">Trainerz</h1>
+			<div class="menu-toggle">
+				<div class="cross"></div>
+			</div>
+		</header>
+
+		<main>
+			<div class="container">
+				<h2 class="heading">Welcome Back</h2>
+				<img src="./img/showcase.png" alt="" />
+				<form class="signup-form">
+					<div class="form-group">
+						<label for="fullname" class="label">Full Name</label>
+						<input
+							type="text"
+							class="input"
+							name="fullname"
+							id="fullname"
+							placeholder="Enter Full Name"
+						/>
+					</div>
+					<div class="form-group">
+						<label for="phone" class="label">Phone Number</label>
+						<input
+							type="tel"
+							class="input"
+							name="phone"
+							id="phone"
+							placeholder="Enter Phone Number"
+						/>
+					</div>
+					<div class="form-group">
+						<label for="email" class="label">Email Address</label>
+						<input
+							type="email"
+							class="input"
+							name="email"
+							id="email"
+							placeholder="Enter Email Address"
+						/>
+					</div>
+					<div class="form-group">
+						<label for="password" class="label">Password</label>
+						<input
+							type="password"
+							class="input"
+							name="password"
+							id="password"
+							placeholder="Enter Password"
+						/>
+					</div>
+					<p>
+						By creating an account you agree to the
+						<a href="#" class="link link-underline">terms of use</a> and our
+						<a href="#" class="link link-underline">privacy policy.</a>
+					</p>
+					<input type="submit" value="Sign Up" class="btn" />
+					<p>
+						Already have an account?
+						<a href="#" class="link link-underline">Log in</a>
+					</p>
+				</form>
+			</div>
+		</main>
+	</body>
 </html>
