--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<main>
 			<div class="container">
 				<h2 class="heading">Welcome Back</h2>
-				<img src="./img/showcase.png" alt="" />
+				<img src="./img/showcase.svg" alt="" />
 				<form class="signup-form">
 					<div class="form-group">
 						<label for="fullname" class="label">Full Name</label>
